--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tailwindcss -i ./src/index.css -o ./src/output.css && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "vite",
-    "preview": "vite preview"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
